# mandorla

./: CITATION.cff  CLAUDE.md  LAB-NOTES.md  LICENSE-CODE  README.md  mandorla.md
experiments/01-vesica-rag/: BENCHMARKS.md  LAB-NOTES.md  Modelfile  pyproject.toml
experiments/01-vesica-rag/results/: DIAGNOSTIC.md
experiments/01-vesica-rag/scripts/: 01_pull_hotpotqa.py  03_encode_corpus.py  04_build_faiss.py  05_build_box_index.py  06_calibrate_tau_v.py  09_score.py
experiments/01-vesica-rag/src/: generate.py  projection.py  retrieve.py
experiments/01-vesica-rag/tests/: test_box.py  test_calibration.py  test_generate.py  test_projection.py  test_retrieve.py  test_runner.py
experiments/02-retrieval-isolation/: .gitignore  LAB-NOTES.md  PRECOMMIT.md  README.md  pyproject.toml
experiments/02-retrieval-isolation/results/: RESULTS.md  corpus_coverage.json  scores.json
experiments/02-retrieval-isolation/scripts/: 01_pull_datasets.py  02_corpus_coverage.py  03_evaluate_retrieval.py  04_score.py
experiments/02-retrieval-isolation/src/: _exp01_bridge.py  datasets.py  eval_retrieval.py
experiments/02-retrieval-isolation/tests/: test_eval_retrieval.py
experiments/03-hex-vote/: README.md
experiments/04-curriculum/: README.md
experiments/04-curriculum/pilot/: LAB-NOTES.md  PILOT.md  pyproject.toml
experiments/04-curriculum/pilot/scripts/: 01_gen_corpus.py  02_train.py  03_evaluate_probe.py
experiments/04-curriculum/pilot/src/: box.py  losses.py  model.py  probe.py  synthetic.py
experiments/04-curriculum/pilot/tests/: test_box.py  test_synthetic_and_probe.py
experiments/05-retrieval-sensitivity/: DESIGN.md
experiments/exp1-vesica-rag/: .gitignore  LAB-NOTES.md  PRECOMMIT.md  README.md  pyproject.toml
experiments/exp1-vesica-rag/results/: RESULTS.md  diagnostic.json  scores.json
experiments/exp1-vesica-rag/scripts/: 01_pull_hotpotqa.py  02_pull_wiki_corpus.py  07_run_baseline.py  08_run_vesica.py  10_diagnostic.py
experiments/exp1-vesica-rag/src/: __init__.py  box.py  calibration.py  data.py  eval.py  generate.py  index_io.py  regions.py  retrieve.py  runner.py
experiments/exp1-vesica-rag/tests/: test_eval.py  test_generate.py  test_regions.py  test_retrieve.py  test_runner.py
findings/: reader-saturation-hotpotqa.md  substrate-rethinks-survey.md
tex/: mandorla.tex
(+19 files in other folders)
