[project]
name = "exp1-vesica-rag"
version = "0.1.0"
description = "Mandorla Experiment 1 — Vesica-RAG vs. dense baseline on HotpotQA dev (smallest defensible slice, §3.4)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "box-embeddings>=0.1.0",
    "datasets>=4.8.5",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
