[project]
name = "exp04-curriculum-pilot"
version = "0.1.0"
description = "Mandorla Experiment 04 — curriculum PILOT (pre-PRECOMMIT de-risking). Synthetic-world test of whether the Vesica/parent losses train stably and produce compositional transfer. NOT the experiment."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
